Обновление конфигурации окружения: замена локального URL сайта на актуальный домен https://ooodmdk.ru.

--- a/stack.env
+++ b/stack.env
@@ -2,8 +2,8 @@
 NODE_ENV=production
 APP_PORT=4321
 
-# URL вашего сайта (замените на ваш домен)
-PUBLIC_SITE_URL=http://localhost:4321
+# URL вашего сайта
+PUBLIC_SITE_URL=https://ooodmdk.ru
 
 # Sanity CMS настройки
 SANITY_PROJECT_ID=hngg8xd3
