--- a/stack.env
+++ b/stack.env
@@ -12,6 +12,14 @@ SANITY_API_VERSION=2023-05-03
 # Токен для Sanity (если нужен для приватных данных)
 SANITY_TOKEN=
 
+# Postgres
+POSTGRES_URL=
+
+# Yandex Translate API
+YANDEX_TRANSLATE_API_KEY=
+YANDEX_FOLDER_ID=
+YANDEX_TRANSLATE_API_URL=https://translate.api.cloud.yandex.net/translate/v2/translate
+
 # Дополнительные настройки безопасности
 CORS_ORIGIN=*
 
