--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   app:
@@ -8,7 +8,7 @@ services:
     container_name: ooodmdk-app
     restart: unless-stopped
     ports:
-      - "3016:4321"
+      - "3016:4321" # не забыть переключать порты 3016 - 3023
     environment:
       - NODE_ENV=production
       - HOST=0.0.0.0
@@ -23,7 +23,15 @@ services:
     env_file:
       - stack.env
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:4321/"]
+      test:
+        [
+          "CMD",
+          "wget",
+          "--no-verbose",
+          "--tries=1",
+          "--spider",
+          "http://localhost:4321/",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -37,4 +45,4 @@ networks:
 
 volumes:
   app-data:
-    driver: local 
+    driver: local
