--- a/stack.env
+++ b/stack.env
@@ -12,10 +12,16 @@ SANITY_API_VERSION=2023-05-03
 # Токен для Sanity (если нужен для приватных данных)
 SANITY_TOKEN=
 
-# Postgres
+# Postgres (требуется для кеширования переводов)
+# Формат: postgresql://username:password@host:port/database
+# Пример: postgresql://user:pass@localhost:5432/mydb
 POSTGRES_URL=
 
-# Yandex Translate API
+# Yandex Translate API (требуется для автоматического перевода документов)
+# Получите API ключ в консоли Yandex Cloud: https://console.cloud.yandex.ru/
+# 1. Создайте сервисный аккаунт
+# 2. Назначьте роль ai.translate.user
+# 3. Создайте API ключ
 YANDEX_TRANSLATE_API_KEY=
 YANDEX_FOLDER_ID=
 YANDEX_TRANSLATE_API_URL=https://translate.api.cloud.yandex.net/translate/v2/translate
@@ -24,4 +30,4 @@ YANDEX_TRANSLATE_API_URL=https://translate.api.cloud.yandex.net/translate/v2/tra
 CORS_ORIGIN=*
 
 # Логирование
-LOG_LEVEL=info 
+LOG_LEVEL=info
